# sixfive

./: .clang-format  .clang-tidy  .clang_complete  .gitignore  .gitmodules  6502_functional_test.a65  6502_functional_test.lst  ARTICLE.md  CMakeLists.txt  Makefile  NOTES.md  PITCHME.md  README.md  assembler.cpp  assembler.h  c64.cpp  compile.h  emulator.cpp  emulator.d  emulator.h  instructions.h  main.cpp  monitor.h  opcodes.txt  parser.cpp  parser.h  sixfive.cpp  sixfive.h  talk.html  test.asm  test2.asm  tests.cpp
asm/: bubble.asm  microchess.asm  sub.asm  test.asm  week.asm
